--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1> hello </h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title></title>
+</head>
+<body>
+	<h1>Hello Github</h1>
+	<img src="github.png">
+</body>
+</html>
