--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 	<title></title>
 </head>
 <body>
-	<h1>Hello Github</h1>
-	<img src="github.png">
+<center><h1>Hello Github</h1>
+		<img id="githubLogo" src="github.png">
+		<p>today i studied such console commands:</p>
+		<img src="consoleCom.PNG">
+		<p>and such git console commands:</p>
+		<img src="consoleGitCom.PNG">
+</center>
 </body>
 </html>
